fix: the find widget button is too wide

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -100,7 +100,8 @@ a {
   @apply focus-ring focus-within:ring-offset-1;
 }
 
-.button.is-auto-width {
+.button.is-auto-width,
+.button.codicon {
   @apply min-w-[auto];
 }
 
